fixes stretched images

--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ main{
 	padding-top: 10px;  
 }
 
+.carousel-item img {
+	object-fit: contain;
+}
+
 .logo {
 	text-align: center;
 	padding-bottom: 15px;
